# promisio

./: CHANGES.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst  quickstart.rst
docs/_static/css/: custom.css
src/promisio/: __init__.py
tests/: test_aplus.py  test_promise.py  test_promisio.py  utils.py
