[metadata]
name = promisio
version = 0.1.0.dev0
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = JavaScript-style async programming for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/promisio
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/promisio/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
